<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.InicioSesion">

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="96dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/lblUsuario"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:maxLength="50"/>

        <EditText
            android:id="@+id/psdContrasenia"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtUsuario"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/lblContrasenia"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"/>

        <Button
            android:id="@+id/btnInicioSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/psdContrasenia"
            android:layout_centerHorizontal="true"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/lblBtnInicioSesion"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/enlaceRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnInicioSesion"
            android:height="0dp"
            android:width="400dp"
            android:text="@string/lblEnlaceRegistro"/>

    </RelativeLayout>
</layout>